refactor: rename reviewer node and prompt files (typo fix)
- Rename export_reviwer_node.py -> export_reviewer_node.py
- Rename 02deepagent_reviwer_prompt.txt -> 02deepagent_reviewer_prompt.txt
- Update import references in graph.py and p02_mdt/graph.py
- Add DeepRareAgent/utils/json_utils.py
- Update README.md with progress on knowledge graph and tasks
- Update .gitignore to exclude *.dump files
- Update knowledge graph subagent docstring

--- a/.gitignore
+++ b/.gitignore
@@ -180,7 +180,7 @@ images/深度诊断单个诊断组的工作示例图.webp
 test_output/
 test_results/
 coverage_html/
-
+.spec-workflow
 # Claude Code specific
 .claude
 
@@ -222,3 +222,4 @@ Desktop.ini
 # Notebook outputs (keep notebooks but clean outputs)
 # *.ipynb
 # !notebooks/*.ipynb
+*.dump
